steam-components/tests/fail/source_sink.stderr
error[E0599]: no method named `port_invalid_rx` found for struct `Rc<steam_components::sink::Sink<_>>` in the current scope
  --> tests/fail/source_sink.rs:15:5
   |
15 |     connect_port!(source, tx => sink, invalid_rx);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     method not found in `Rc<Sink<_>>`
   |
   = note: this error originates in the macro `connect_port` (in Nightly builds, run with -Z macro-backtrace for more info)
